--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "type": "git",
     "url": "git+https://github.com/Mari-Krukovskaya/frontend-project-44.git"
   },
+  "bin": {
+       "brain-games": "bin/brain-games.js"
+  },
   "author": "Maria",
   "license": "ISC",
   "bugs": {
