--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
   "dependencies": {
     "lodash": "^4.17.21",
     "readline-sync": "^1.4.10"
+  },
+  "devDependencies": {
+    "prettier": "^2.8.3"
   }
 }
