--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "readline-sync": "^1.4.10"
   },
   "devDependencies": {
+    "eslint": "^8.32.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.27.5",
     "prettier": "^2.8.3"
   }
 }
