--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,5 +1,15 @@
+env:
+  node: true
+  es2020: true
+
 extends: 
   - 'airbnb-base'
+  - 'plugin: jest/recommended'
 
-  rules:
-   no-console: 0
+parserOptions:
+
+  sourceType: module
+  ecmaVersion: latest 
+
+rules:
+  no-console: 0
