--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -13,3 +13,9 @@ parserOptions:
 
 rules:
   no-console: 0
+
+import/extensions: # FIXME: remove when rule will be adjusted for new nodejs version
+  - error
+  - ignorePackages
+  - js: always
+  no-undersccore-dangle: [2,{ "allow": ["__filename", "__dirname"] }]
