--- a/package.json
+++ b/package.json
@@ -21,13 +21,16 @@
   },
   "homepage": "https://github.com/Mari-Krukovskaya/frontend-project-44#readme",
   "dependencies": {
+    "jest": "^29.4.1",
     "lodash": "^4.17.21",
+    "package": "^1.0.1",
     "readline-sync": "^1.4.10"
   },
   "devDependencies": {
     "eslint": "^8.32.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jest": "^27.2.1",
     "prettier": "^2.8.3"
   }
 }
