--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "eslint": "^8.32.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jest": "^27.2.1",
-    "prettier": "^2.8.3"
+    "eslint-plugin-jest": "^27.2.1"
   }
 }
